--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - "pip install coveralls"
 # command to run tests
 script:
-  - coverage run --source='api' python manage.py test && coverage report
+  - cd bl
+  - coverage run --source='api' ./manage.py test && coverage report
 after_success:
   coveralls
