[fix] Try something new

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
 # command to run tests
 script:
   - cd bl
-  - coverage run --source='api' ./manage.py test && coverage report
+  - coverage run --source=api ./manage.py test && coverage report
 after_success:
   coveralls
